# src/routes/index.js
@@ -5,6 +5,7 @@ import petRoutes from './pet.routes.js';
 import clientRoutes from './client.routes.js';
 import vetRoutes from './vet.routes.js';
 import medicalRecordRoutes from './medicalRecord.routes.js';
+import appointmentRoutes from './appointment.routes.js';
 
 const router = Router();
 
@@ -15,5 +16,6 @@ router.use('/pets', petRoutes);
 router.use('/clients', clientRoutes);
 router.use('/vets', vetRoutes);
 router.use('/medical-records', medicalRecordRoutes);
+router.use('/appointments', appointmentRoutes);
 
 export default router;
